metodos fecha y hora

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://heroe:heroe@test.pa7hd.mongodb.net/clinicaReactiva?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://Edwar016:edwar016@cluster0.yu0p1.mongodb.net/DBCitasMedicas?retryWrites=true&w=majority
+
