Cambiar modelo y crear endpoint para padecimientos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://camilomonje:CMongo2022@proyectos.gwkbq.mongodb.net/citasdb?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://wiladmin:naopez0603@cluster0.plbqk.mongodb.net/citasdb?retryWrites=true&w=majority
